<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_setting">Search Setting</string>
    <string name="adv_setting">Advance Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>

    <string-array name="image_size_array">
        <item ></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    <string-array name="color_filter_array">
        <item ></item>
        <item>black</item>
        <item>red</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
    </string-array>
    <string-array name="image_type_array">
        <item ></item>
        <item>faces</item>
        <item>photo</item>
        <item>clip</item>
        <item>art</item>
        <item>line art</item>
    </string-array>
        <string name="search_title">Search Title</string>
    
</resources>
